--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,12 @@ service: default
 handlers:
   - url: /
     static_files: _site/index.html
-    upload: _site/*
+    upload: _site/index.html
 
-  - url: /
-    static_dir: _site/
+  - url: /(.+)/
+    static_files: _site/\1/index.html
+    upload: _site/(.+)/index.html
+
+  - url: /*
+    static_files: _site/\1
+    upload: _site/*
